@@ -1,4 +1,5 @@
 4.3.1
+	Fix LDAP thread safety issues
 	Make LDAP querries timeout configurable
 	Make MX sync timeout peer-configurable (Attila Bruncsak)
 	Fix a crash when LDAP server is down
